[web] Add: Fix white-space behavior in firefox https://css-tricks.com/almanac/properties/w/whitespace/

--- a/source/web/src/static/styles/bingMap.less
+++ b/source/web/src/static/styles/bingMap.less
@@ -241,7 +241,7 @@
                                     font-weight:bold;
                                     .limitedLines(2, 25px, #f9f9f9);
                                     word-wrap:break-word;
-                                    white-space:pre;
+                                    white-space:pre-wrap;
                                     color:#666;
                                     top:5px;
                                 }
